# aaif-mcp-server

./: .dockerignore  .gcloudignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  TODO-TRACKER.md  deploy-cloudrun.sh  docker-compose.yml  fly.toml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
scripts/: setup_sandbox.sh  validate_sandbox.py
src/aaif_mcp_server/: __init__.py  __main__.py  auth.py  config.py  errors.py  models.py  retry.py  server.py  utils.py
src/aaif_mcp_server/connectors/: __init__.py  base.py  calendar.py  discord.py  github_connector.py  groupsio.py  hubspot.py  lfx_platform.py  pis_client.py  pis_github.py  pis_groupsio.py  pis_meeting.py  registry.py  salesforce.py
src/aaif_mcp_server/resources/: __init__.py  checklist.py  member.py  rules.py
src/aaif_mcp_server/tools/: __init__.py  _registry.py  calendar.py  call_scheduling.py  compliance.py  contact_roles.py  elections.py  logo_brand.py  mailing_list.py  orchestrator.py  press_release.py  renewal_intelligence.py  tier_validation.py  wg_enrollment.py
tests/: __init__.py  conftest.py  test_calendar.py  test_call_scheduling.py  test_compliance.py  test_contact_roles.py  test_elections.py  test_logo_brand.py  test_mailing_list.py  test_orchestrator.py  test_pis_connectors.py  test_pis_meeting.py  test_press_release.py  test_renewal_intelligence.py  test_resources.py  test_tier_validation.py  test_tools_github_integration.py  test_tools_meeting_integration.py  test_wg_enrollment.py
