[project]
name = "aaif-mcp-server"
version = "0.1.0"
description = "AAIF Member Onboarding MCP Server — unified API for 48 onboarding tools across any AI client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
aaif-mcp-server = "aaif_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
