[project]
name = "aaif-mcp-server"
version = "0.1.0"
description = "AAIF PMO Agent — MCP Server powering 49 onboarding tools for LFX PCC, Cowork, Intercom Fin, and other MCP clients"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
aaif-mcp-server = "aaif_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
